tdf#162601: UNIQUE function is case-insensitive

Change-Id: I12d67cb926c1e6dc8b7863529639dc252385b8e3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181035
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Tested-by: Jenkins